[project]
name = "boston311"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fernando Mazzoni", email = "fernando1mazzoni@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.5",
    "pyarrow>=21.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.4.1",
    "types-geopandas>=1.1.1.20250809",
]
