[project]
name = "boston311"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Fernando Mazzoni", email = "fernando1mazzoni@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "colorcet>=3.1.0",
    "datasets>=4.2.0",
    "duckdb>=1.3.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "geoviews>=1.14.1",
    "hvplot>=0.12.0",
    "ipywidgets-bokeh>=1.6.0",
    "lonboard>=0.11.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.5",
    "palettable>=3.3.3",
    "panel>=1.7.5",
    "pyarrow>=21.0.0",
    "pyogrio>=0.11.1",
    "requests>=2.31.0",
    "setuptools>=80.9.0",
    "watchfiles>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boston311"]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.35.3",
    "ipykernel>=6.30.1",
    "jupyter-bokeh>=4.0.5",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.4.1",
    "types-geopandas>=1.1.1.20250809",
]
